BugFix: change behavior for more legibility in header-utility-tool-bar on hover (bsc#967893)

--- a/branding/css/susemanager-theme.less
+++ b/branding/css/susemanager-theme.less
@@ -889,7 +889,9 @@ i.spacewalk-help-link {
 		  padding-bottom: 8px;
 		}
 		a:hover {
-      color: #fff
+      color: #fff;
+			text-decoration: underline;
+			background-color: transparent;
 		}
 		.search {
 			.form-group {
